@@ -59,6 +59,7 @@ following names for their contribution to the product.
 * Brad Jorsch
 * Brent G
 * Brianna Laugher
+* Carlin
 * Daniel Arnold
 * Danny B.
 * FunPika
