@@ -92,6 +92,7 @@ class MagicWord {
 		'numberofusers',
 		'numberofactiveusers',
 		'newsectionlink',
+		'nonewsectionlink',
 		'numberofpages',
 		'currentversion',
 		'basepagename',
@@ -160,6 +161,7 @@ class MagicWord {
 		'toc',
 		'noeditsection',
 		'newsectionlink',
+		'nonewsectionlink',
 		'hiddencat',
 		'index',
 		'noindex',
